@@ -264,6 +264,8 @@ fixed
 
 271776 - s390x: Support STFLE instruction
 
+267020 - Make directory for temporary files configurable at run-time.
+
 
 Release 3.6.1 (16 February 2011)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
